--- a/app/src/main/res/layout/activity_ending.xml
+++ b/app/src/main/res/layout/activity_ending.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="edu.aku.hassannaqvi.kmc_screening.ui.EndingActivity">
+    tools:context="edu.aku.hassannaqvi.kmc_screening.ui.other.EndingActivity">
 
     <data>
 
@@ -9,7 +9,7 @@
 
         <variable
             name="callback"
-            type="edu.aku.hassannaqvi.kmc_screening.ui.EndingActivity" />
+            type="edu.aku.hassannaqvi.kmc_screening.ui.other.EndingActivity" />
     </data>
 
     <ScrollView
