--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,10 +14,10 @@
         android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingTop="72dp"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="72dp">
+        android:paddingBottom="@dimen/activity_vertical_margin">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,8 +29,8 @@
                 android:id="@+id/lblheader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
                 android:background="@color/dullWhile"
                 android:text="Main Menu"
                 android:textColor="@color/colorPrimary"
@@ -81,20 +81,43 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/openForm"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
                 android:layout_marginTop="16dp"
-                android:onClick="@{() -> callback.openForm()}"
-                android:text="OPEN FORM" />
+                android:layout_marginBottom="8dp"
+                android:onClick="@{(v) -> callback.openForm(0)}"
+                android:text="FORM-0 PW REGISTRATION" />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:onClick="@{(v) -> callback.openForm(1)}"
+                android:text="FORM-1 PARTICIPANT ELIGIBILITY SCREENING" />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:onClick="@{(v) -> callback.openForm(2)}"
+                android:text="FORM-2 RECRUITMENT FORM" />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:onClick="@{(v) -> callback.openForm(3)}"
+                android:text="FORM-3 FOLLOWUP FORM" />
 
             <Button
                 android:id="@+id/syncServer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
                 android:onClick="syncServer"
                 android:text="Upload Data" />
 
@@ -108,18 +131,18 @@
                     android:id="@+id/syncDevice"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
                     android:layout_marginTop="16dp"
+                    android:layout_marginBottom="8dp"
                     android:onClick="syncDevice"
-                    android:visibility="gone"
-                    android:text="Download Data" />
+                    android:text="Download Data"
+                    android:visibility="gone" />
 
                 <Button
                     android:id="@+id/downloadApp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
                     android:layout_marginTop="16dp"
+                    android:layout_marginBottom="8dp"
                     android:background="@color/red"
                     android:text="DOWNLOAD APP"
                     android:textColor="@color/white"
@@ -129,8 +152,8 @@
                     android:id="@+id/updateApp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
                     android:layout_marginTop="16dp"
+                    android:layout_marginBottom="8dp"
                     android:background="#D60000"
                     android:onClick="updateApp"
                     android:text="Update App"
@@ -140,8 +163,8 @@
                     android:id="@+id/openDB"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
                     android:layout_marginTop="16dp"
+                    android:layout_marginBottom="8dp"
                     android:onClick="openDB"
                     android:text="Open Database Manager" />
 
@@ -149,8 +172,8 @@
                     android:id="@+id/testGPS"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
                     android:layout_marginTop="16dp"
+                    android:layout_marginBottom="8dp"
                     android:onClick="testGPS"
                     android:text="Test GPS Coordinates" />
             </LinearLayout>
