--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,7 +25,7 @@
         <item name="android:checkboxStyle">@style/checkbox</item>
         <item name="android:radioButtonStyle">@style/radiobutton</item>
         <item name="spinnerStyle">@style/spinner</item>
-        <!--<item name="toolbarStyle">@style/ActionBar</item>-->
+        <item name="toolbarStyle">@style/ActionBar</item>
 
         <!-- Customize your theme here. -->
     </style>
@@ -257,7 +257,7 @@
     </style>
 
     <style name="BackgroundStyle" parent="android:Widget.Material.Light.ScrollView">
-        <item name="android:background">#e4e4e4</item>
+        <item name="android:background">@color/white</item>
         <item name="android:padding">10dp</item>
     </style>
 
@@ -289,7 +289,7 @@
     </style>
 
     <style name="ActionBar">
-        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:background">@color/colorPrimaryDark</item>
     </style>
 
     <style name="linearlayout_view">
