some more changes

--- a/app/src/main/res/layout/activity_section_a_form0.xml
+++ b/app/src/main/res/layout/activity_section_a_form0.xml
@@ -167,7 +167,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="dd/MM/yyyy"
-                        app:dateFormat="dd/MM/yyyy" />
+                        app:dateFormat="dd-MM-yyyy" />
 
                     <TextView
                         style="@style/i_textview"
