--- a/app/src/main/res/layout/activity_section_a_form1.xml
+++ b/app/src/main/res/layout/activity_section_a_form1.xml
@@ -33,7 +33,7 @@
                 </android.support.v7.widget.CardView>
 
 
-                <!-- kf1b01_TextView-->
+                <!-- kf1b01_EDIT-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf1b01"
                     style="@style/cardView">
@@ -113,8 +113,6 @@
                 <!-- kf1b04 Header-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf1b0"
-
-
                     style="@style/cardView">
 
                     <LinearLayout style="@style/linearlayout_view">
@@ -124,17 +122,15 @@
                         android:text="@string/kf1b04"
                         android:textStyle="bold"
                         android:textSize="23sp"
-                        android:background="@color/gray"
-                        />
+                        android:background="@color/gray"/>
+
                     </LinearLayout>
+
                 </android.support.v7.widget.CardView>
 
 
                 <!-- kf1b04a Header-->
                 <android.support.v7.widget.CardView
-
-
-
                     style="@style/cardView">
 
                     <LinearLayout style="@style/linearlayout_view">
@@ -144,10 +140,11 @@
                             android:text="@string/kf1b04a"
                             android:textStyle="bold"
                             android:textSize="20sp"
-                            android:background="@color/grayOverlay"
-                            />
+                            android:background="@color/grayOverlay" />
                     </LinearLayout>
+
                 </android.support.v7.widget.CardView>
+
                 <!-- kf1b04a01_TextView-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf1b04a01"
@@ -172,8 +169,11 @@
                                 android:id="@+id/kf1b04a01b"
                                 style="@style/i_radiobutton"
                                 android:text="@string/no" />
+
                         </RadioGroup>
+
                     </LinearLayout>
+
                 </android.support.v7.widget.CardView>
 
                 <!-- kf1b04a02_TextView-->
@@ -200,8 +200,11 @@
                                 android:id="@+id/kf1b04a02b"
                                 style="@style/i_radiobutton"
                                 android:text="@string/no" />
+
                         </RadioGroup>
+
                     </LinearLayout>
+
                 </android.support.v7.widget.CardView>
 
                 <!-- kf1b04a03_TextView-->
@@ -447,9 +450,9 @@
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
 
-                <!-- kf1ab04b06_TextView-->
+                <!-- kf1b04b06_TextView-->
                 <android.support.v7.widget.CardView
-                    android:id="@+id/fldGrpCVkf1ab04b06"
+                    android:id="@+id/fldGrpCVkf1b04b06"
                     style="@style/cardView">
 
                     <LinearLayout style="@style/linearlayout_view">
@@ -459,16 +462,16 @@
                             android:text="@string/yes" />
 
                         <RadioGroup
-                            android:id="@+id/kf1ab04b06"
+                            android:id="@+id/kf1b04b06"
                             style="@style/i_radiogroup">
 
                             <RadioButton
-                                android:id="@+id/kf1ab04b06a"
+                                android:id="@+id/kf1b04b06a"
                                 style="@style/i_radiobutton"
                                 android:text="@string/yes" />
 
                             <RadioButton
-                                android:id="@+id/kf1ab04b06b"
+                                android:id="@+id/kf1b04b06b"
                                 style="@style/i_radiobutton"
                                 android:text="@string/no" />
                         </RadioGroup>
@@ -561,9 +564,6 @@
 
                 <!-- kf1b04c Header-->
                 <android.support.v7.widget.CardView
-
-
-
                     style="@style/cardView">
 
                     <LinearLayout style="@style/linearlayout_view">
@@ -608,13 +608,9 @@
 
 
 
-
-
                 <!-- kf1b05 Header-->
-
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkkf1b05maj"
-
 
                     style="@style/cardView">
                 <android.support.v7.widget.CardView
@@ -792,8 +788,19 @@
                                 android:id="@+id/kf1b05a05b"
                                 style="@style/i_radiobutton"
                                 android:text="@string/no" />
+
+                            <EditText
+                                android:id="@+id/kf1b05a0596"
+                                style="@style/EditText"
+                                android:tag="kf1b05a05a"
+                                android:hint="@string/other"
+                                android:visibility='@{kf1b05a05a.checked ? View.VISIBLE : View.GONE }'
+                                android:text='@{kf1b05a05a.checked ? kf1b05a0596.getText.toString : "" }'/>
+
                         </RadioGroup>
+
                     </LinearLayout>
+
                 </android.support.v7.widget.CardView>
 
 
@@ -895,6 +902,8 @@
 
 
                 </android.support.v7.widget.CardView>
+
+
                 <!-- kf1b08_TextView-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf1b08"
@@ -958,9 +967,6 @@
                         </RadioGroup>
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
-
-
-
 
                 <!-- kf1b010_TextView-->
                 <android.support.v7.widget.CardView
