--- a/app/src/main/res/layout/activity_section_a_form0.xml
+++ b/app/src/main/res/layout/activity_section_a_form0.xml
@@ -98,21 +98,27 @@
                     style="@style/i_textview"
                     android:text="@string/kapr01" />
 
-                <EditText
+                <com.edittextpicker.aliazaz.EditTextPicker
                     android:id="@+id/kapr02b"
                     style="@style/EditText_number"
                     android:hint="@string/kapr01"
-                    android:maxLength="3" />
+                    android:maxLength="3"
+                    app:maxValue="999"
+                    app:minValue="1"
+                    app:type="range" />
 
                 <TextView
                     style="@style/i_textview"
                     android:text="@string/kapr02" />
 
-                <EditText
+                <com.edittextpicker.aliazaz.EditTextPicker
                     android:id="@+id/womenID"
                     style="@style/EditText_number"
                     android:hint="@string/kapr02"
-                    android:maxLength="1" />
+                    android:maxLength="1"
+                    app:maxValue="5"
+                    app:minValue="1"
+                    app:type="range" />
 
 
             </LinearLayout>
@@ -147,15 +153,14 @@
                         style="@style/i_textview"
                         android:text="@string/kapr04" />
 
-                    <EditText
+                    <com.edittextpicker.aliazaz.EditTextPicker
                         android:id="@+id/kapr04"
-                        style="@style/textInput"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:digits="0123456789"
+                        style="@style/EditText_number"
                         android:hint="@string/kapr04"
-                        android:inputType="number"
-                        android:maxLength="2" />
+                        android:maxLength="2"
+                        app:maxValue="49"
+                        app:minValue="15"
+                        app:type="range" />
 
                     <TextView
                         style="@style/i_textview"
@@ -167,7 +172,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="dd/MM/yyyy"
-                        app:dateFormat="dd-MM-yyyy" />
+                        app:dateFormat="dd-MM-yyyy"
+                        app:minDate="CR_DATE" />
 
                     <TextView
                         style="@style/i_textview"
@@ -239,15 +245,14 @@
                         style="@style/i_textview"
                         android:text="@string/kapr11" />
 
-                    <EditText
+                    <com.edittextpicker.aliazaz.EditTextPicker
                         android:id="@+id/kapr11"
-                        style="@style/textInput"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:digits="0123456789"
+                        style="@style/EditText_number"
                         android:hint="@string/kapr11"
-                        android:inputType="number"
-                        android:maxLength="2" />
+                        android:maxLength="2"
+                        app:maxValue="50"
+                        app:minValue="2"
+                        app:type="range" />
                 </LinearLayout>
 
                 <TextView
@@ -407,51 +412,41 @@
 
 
                 <LinearLayout
-                    android:id="@+id/fldGrpcra02"
+                    android:id="@+id/fldGrpbtn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:visibility="visible">
+                    android:orientation="horizontal"
+                    android:paddingTop="32dp">
 
-
-                    <LinearLayout
-                        android:id="@+id/fldGrpbtn"
-                        android:layout_width="match_parent"
+                    <Button
+                        android:id="@+id/btnNext"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:paddingTop="32dp">
+                        android:layout_margin="4dp"
+                        android:layout_weight="1"
+                        android:background="@android:color/holo_green_light"
+                        android:onClick="@{() -> callback.BtnContinue()}"
+                        android:text="@string/nextSection"
+                        android:textColor="@color/white"
+                        android:textSize="24sp" />
 
-                        <Button
-                            android:id="@+id/btnNext"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="4dp"
-                            android:layout_weight="1"
-                            android:background="@android:color/holo_green_light"
-                            android:onClick="@{() -> callback.BtnContinue()}"
-                            android:text="@string/nextSection"
-                            android:textColor="@color/white"
-                            android:textSize="24sp" />
-
-                        <Button
-                            android:id="@+id/btnEnd"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="4dp"
-                            android:layout_weight="1"
-                            android:background="@android:color/holo_red_light"
-                            android:onClick="@{() -> callback.BtnEnd()}"
-                            android:text="@string/endForm"
-                            android:textColor="@color/white"
-                            android:textSize="24sp"
-                            android:textStyle="bold" />
-
-                    </LinearLayout>
+                    <Button
+                        android:id="@+id/btnEnd"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="4dp"
+                        android:layout_weight="1"
+                        android:background="@android:color/holo_red_light"
+                        android:onClick="@{() -> callback.BtnEnd()}"
+                        android:text="@string/endForm"
+                        android:textColor="@color/white"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        android:visibility="gone" />
 
                 </LinearLayout>
 
             </LinearLayout>
-
 
         </LinearLayout>
     </ScrollView>
